--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -50,7 +50,7 @@
           <% } else  { %>
           <li class="nav-item">
           <% } %>
-          <a class="nav-link" href="/contact-list"><i class="fas fa-lg fa-solid fa-contact-medical"></i>Contacts List</a>
+          <a class="nav-link" href="/contact-list"><i class="fas fa-lg fa-solid fa-envelope"></i> Contacts List</a>
           </li>
 
         <% if(title == "Contact") { %>
